packages/pw-component-input-group/style.css
@import 'pw-base-css/vars.css';

.base {
  @apply --default-border-and-radius;

  & > * {
    border-radius: 0;
    margin-bottom: 0;
    border: 0;
    width: 100%;
  }

  & > *:not(:last-child) {
    border-bottom: var(--defaultBorder);
  }

  & > *:last-child {
    border-bottom: 0;
  }
}

